# AuraNexus

./: .gitignore  AuraNexus.code-workspace  AuraNexusLauncher.spec  COMPLIANCE_DOCS_INDEX.md  CORE_FOCUS.md  CURRENT_STATUS.md  DEVELOPMENT_WORKFLOW.md  DEV_CHECKLIST.md  Dockerfile  Dockerfile.agent  FRONTEND_IMPLEMENTATION.md  HIERARCHICAL_MEMORY_GUIDE.md  HIPAA_COMPLIANCE.md  HIPAA_QUICK_REFERENCE.md  IMPLEMENTATION_TRACKER.md  LICENSE  MERGE_REPORT.txt  MERGE_SUMMARY.txt  NOTICE  OPTIMIZATION_ANALYSIS.md  OUT_OF_BOX_EXPERIENCE.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PRIVACY.md  PROJECT_STRUCTURE.md  PYTHON_TO_RUST_REFERENCE.md  QUICKSTART.md  README.md  REPO_INSPIRATION.md  REPO_MAPPING.md  RLM_INTEGRATION_GUIDE.md  RLM_QUICK_REFERENCE.md  SECURITY_CHECKLIST.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-01-10.md  START_AURANEXUS.bat  START_HERE.md  TAURI_UI_REFERENCE.md  TERMS_OF_SERVICE_TEMPLATE.md  TESTING_GUIDE.md  TOMORROW_CHECKLIST.md  (+32 more)
.github/workflows/: prereq-check.yml
AuraNexus/: README.md
app/: aura_launcher.py  koboldcpp_stub.py  requirements.txt
app/aura_api/: app.py
app/config/: config.yaml
archive/deprecated_ollama/: agent_runtime.py  ollama_bundle_manager.py  ollama_service_manager.py  progressive_loader.py  secure_inference_engine_corrupted.py
assets/: README.txt
avatar/: vts_controller.py
data-manager/anything-llm/: server.js
data/rag/: chroma.sqlite3
docs/: BUNDLED_OLLAMA.md  COMPLETE_API.md  DEV_SETUP.md  DOCKER_ARCHITECTURE.md  EMBEDDINGS_MEMORY.md  FEATURE_SUMMARY.md  GITHUB_PUBLISH.md  GIT_WORKFLOW.md  HOW_TO_LAUNCH.md  INFERENCE_FEATURES.md  KOBOLDCPP_FEATURES.md  KOBOLDCPP_GGUF_HARVEST.md  LAUNCHER_INTEGRATION.md  MEMORY_ARCHITECTURE_ANALYSIS.md  MEMORY_ESTIMATION_IMPLEMENTATION.md  MODEL_IMPORT_FIX.md  MODEL_SETUP.md  OLD_AURANEXUS_FEATURES.md  OLLAMA_CLIENT_QUICK_REF.md  OLLAMA_CLIENT_UPGRADE.md  OLLAMA_FEATURE_VERIFICATION.md  OLLAMA_PYTHON_HARVEST.md  OLLAMA_REMOVAL_COMPLETE.md  SECURE_INSTALL.md  SECURITY_ARCHITECTURE.md  STRUCTURED_OUTPUTS_TOOLS.md  TIMESTAMP_FEATURE_IMPLEMENTATION.md  VRAM_OPTIMIZATION_IMPLEMENTATION.md  repo_triage_sillytavern.md
electron-app/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  quick_test.py  test_api.py  test_async_agents.py  test_llm_integration.py
electron-app.OLD/: INPROCESS_LLM_ARCHITECTURE.md  KOBOLDCPP_SETUP.md  QUICKSTART.md  test_inprocess_llm.py  test_model_download.py
electron-app.OLD/backend/: CHAT_INTEGRATION_GUIDE.md  init_model.py  (+10 more)
launcher/: QUICK_START.md  README.md  __init__.py  config.py  docker_manager.py  launcher.py  updater.py
scripts/: check_prereqs.ps1  dev_setup.ps1  dev_setup.sh  init_submodules.ps1  publish_repo.ps1
src/: __init__.py  anythingllm_client.py  builtin_rag.py  gguf_architecture.py  layer_splitter.py  main.py  memory_estimator.py  ollama_chat.py  ollama_client.py  ollama_manager.py  secure_chat.py  secure_inference_engine.py  time_utils.py  unified_chat_window.py  vram_monitor.py
tauri-app/: .gitignore  FEATURES_ADDED.md  SETUP.md  build-cuda.ps1  package-lock.json  package.json  run-with-venv.bat
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/.cargo/: config.toml
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: llm.rs  main.rs  memory.rs  memory_store.rs  models.rs  python_bridge.rs  rag_example.rs  text_chunker.rs
tests/: interactive_test.py  test_all_features.py  test_health_debug.py  test_kobold_harvest.py  test_launcher_integration.py  test_memory_embed.py  test_upgrades.py  tool_demo.py
tools/: deploy_to_usb.ps1  diagnose_ollama.py  freeze_requirements.ps1  health_check.py  import_to_ollama.ps1  make_icon.py  repro_ollama_500.py  setup_env.ps1  stress_ollama.py  test_api_create.py  test_features.py  test_model_change.py  test_model_import.py  test_model_import_v2.py  test_ollama_client.py
(+48 files in other folders)
